--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -144,10 +144,10 @@
             <nav class="amado-nav">
                 <ul>
                     <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="shop.html">Shop</a></li>
-                    <li><a href="product-details.html">Product</a></li>
-                    <li><a href="cart.html">Cart</a></li>
-                    <li><a href="checkout.html">Checkout</a></li>
+                    <li><a href="shop.html">Search Product</a></li>
+                    <li><a href="product-details.html">Add Product</a></li>
+                    <li><a href="cart.html">View Offers</a></li>
+                    <li><a href="checkout.html">Cart</a></li>
                 </ul>
             </nav>
             <!-- Button Group -->
