--- a/templates/my-product_detail.html
+++ b/templates/my-product_detail.html
@@ -1,4 +1,4 @@
-{% extends "layout/main.html" %}
+{% extends "base.html" %}
 {% load static %}
 
 {% block content %}
@@ -101,12 +101,7 @@
         margin-bottom: 10px;
     }
 </style>
-    <!-- Bootstrap Font Icon CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    
 </head>
 <body>
     <!-- Product Details Area Start -->
@@ -216,7 +211,7 @@
                         <!-- </form> -->
                         
                         <!-- The Modal Edit -->
-                        <div class="modal fade" id="EditModal-{{product.id}}" tabindex="-1" role="dialog" aria-labelledby="  EditModalLabel" aria-hidden="true">
+                        <div class="modal fade" id="Modal-{{product.id}}" tabindex="-1" role="dialog" aria-labelledby="  EditModalLabel" aria-hidden="true">
                             <div class="modal-dialog modal-lg" role="document">
                             <div class="modal-content">
                                 <div class="modal-header"style="background-color:powderblue;">
@@ -253,6 +248,12 @@
                                     onclick="document.getElementById('fileInput').click();"
                                     ></i>
                                 </div> -->
+                                <!-- Product Image -->
+                                <div class="product-img" style="width: 50%; height: auto;">
+                                    <img src="{{product.image.url}}" alt=""> <!-- {% static 'img/product1.jpg' %} -->
+                                    <!-- Hover Thumb -->
+                                    <!-- <img class="hover-img" src="{% static 'images/clothes1.jpg' %}" alt=""> -->
+                                </div>
                                 <div class="custom-file mt-3 mb-3">
                                     <input name="images" id="fileInput" type="file" class="btn btn-primary btn-block mx-auto"
                                     value ={{product.image}} /> <!--multiple-->
